--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=ContactApi
-spring.datasource.url=jdbc:mysql://localhost:3306/crudapi
+spring.application.name=Contacts
+spring.datasource.url=jdbc:mysql://localhost:3306/contacts
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
